png, fileloader added

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -64,3 +64,8 @@ body {
     border-style: solid;
     border-color: black;
 }
+#kafopticonbg{
+    max-width: 50%;
+    height: auto;
+    width: auto;
+}
