--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -65,7 +65,5 @@ body {
     border-color: black;
 }
 #kafopticonbg{
-    max-width: 50%;
-    height: auto;
-    width: auto;
+    height: 100px;
 }
