Added config to docker-compose to save grafana dashbords and added react-router

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,8 @@
 body {
-   background-color: rgb(245,235,147);
+   background-color: rgb(250, 250, 166);
    margin: 0;
    width: 100%;
+   background-repeat: no-repeat;
 }
 
 #headerLog {
