--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -176,82 +176,97 @@ body {
 }
 
 #addPanel {
-    height: 40px;
-    width: 200px;
-    background-color:  rgb(60, 175, 247);
-    padding: 10px;
-    border-radius: 7px;
-    font-size: 14px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: white;
-    font-weight: bold;
-    border-style: solid;
-    border-color: white;
-    margin-left: 50px;
+  height: 40px;
+  width: 200px;
+  background-color: rgb(60, 175, 247);
+  padding: 10px;
+  border-radius: 7px;
+  font-size: 14px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: white;
+  font-weight: bold;
+  border-style: solid;
+  border-color: white;
+  margin-left: 50px;
 }
 
-#dropMenu{
-    height: 40px;
-    width: 200px;
-    background-color:  rgb(60, 175, 247);
-    padding: 10px;
-    border-radius: 7px;
-    font-size: 14px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: white;
-    font-weight: bold;
-    border-style: solid;
-    border-color: white;
-    margin-left: 50px;
+#dropMenu {
+  height: 40px;
+  width: 200px;
+  background-color: rgb(60, 175, 247);
+  padding: 10px;
+  border-radius: 7px;
+  font-size: 14px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: white;
+  font-weight: bold;
+  border-style: solid;
+  border-color: white;
+  margin-left: 50px;
 }
 
-#deletePanel{
-    height: 40px;
-    width: 200px;
-    background-color:  rgb(60, 175, 247);
-    padding: 10px;
-    border-radius: 7px;
-    font-size: 14px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: white;
-    font-weight: bold;
-    border-style: solid;
-    border-color: white;
-    margin-left: 50px;
+#deletePanel {
+  height: 40px;
+  width: 200px;
+  background-color: rgb(60, 175, 247);
+  padding: 10px;
+  border-radius: 7px;
+  font-size: 14px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: white;
+  font-weight: bold;
+  border-style: solid;
+  border-color: white;
+  margin-left: 50px;
 }
 
 #dropDownMenu {
-    width: 800px;
+  width: 800px;
 }
 
 #menuSection {
-    position: relative;
-    background: orange;
-    border-style: solid;
-    border-color: white;
-    width: 300px;
-    border-radius: 5px;
-    margin-left: 20px;
-    max-height: 70px;
-    overflow-y: auto;
+  position: relative;
+  background: orange;
+  border-style: solid;
+  border-color: white;
+  width: 300px;
+  border-radius: 5px;
+  margin-left: 20px;
+  max-height: 70px;
+  overflow-y: auto;
 }
 
-.menu{
-    position:relative;
-    list-style: none;
-    color: white;
-    font-size: 14px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    margin-right: 20px;
+.menu {
+  position: relative;
+  list-style: none;
+  color: white;
+  font-size: 14px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  margin-right: 20px;
 }
 
-.menu li:hover{
-    color: rgb(60, 114, 186);
-    cursor: pointer
+.menu li:hover {
+  color: rgb(60, 114, 186);
+  cursor: pointer;
 }
 
 button:hover {
-    cursor: pointer
+  cursor: pointer;
 }
-
+.loading-alert {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000; /* High z-index to be on top */
+  background: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
